# chatbot_todo

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  RUNTIME_TEST_RESULTS.md  TEST_REPORT.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/data/: .gitkeep
backend/migrations/: 001_add_task_extensions.sql  002_create_reminders_table.sql  003_create_recurrences_table.sql  004_create_processed_events_table.sql
backend/src/: __init__.py  main.py
backend/src/agent/: __init__.py  engine.py  executor.py  intent.py  policy.py  resolver.py  responses.py  schemas.py
backend/src/api/: __init__.py  deps.py  jwt.py  password.py
backend/src/api/routes/: __init__.py  auth.py  chat.py  events.py  (+3 more)
backend/src/dapr/: __init__.py  client.py  secrets.py
backend/src/db/: __init__.py  config.py  engine.py  session.py
backend/src/events/: __init__.py  constants.py  publisher.py  schemas.py
backend/src/llm_runtime/: __init__.py  adapter.py  constitution.md  engine.py  errors.py  executor.py  schemas.py
backend/src/mcp_server/: __init__.py  __main__.py  schemas.py  server.py
backend/src/models/: __init__.py  conversation.py  enums.py  message.py  processed_event.py  recurrence.py  reminder.py  task.py  user.py
backend/src/observability/: __init__.py  baseline_service.py  categories.py  database.py  logging_service.py  models.py  query_service.py  validation_service.py
backend/src/services/: __init__.py  chat_service.py
backend/tests/agent/: __init__.py  conftest.py  test_audit.py  test_determinism.py  test_engine.py  test_intent.py  test_policy.py  test_resolver.py  test_schemas.py  test_security.py
backend/tests/llm_runtime/: __init__.py  conftest.py  mocks.py  test_engine.py  test_executor.py  test_integration.py
backend/tests/mcp/: conftest.py  test_add_task.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py  test_update_task.py
backend/tests/observability/: __init__.py  conftest.py  test_baseline.py  test_categories.py  test_logging.py  test_queries.py  test_validation.py
backend/tests/unit/: test_password.py
(+238 files in other folders)
